# telegram_bot_p37

./: .env.example  .flake8  .gitignore  README.md  TODO  alembic.ini  config.py  main.py  pyproject.toml
migrations/: env.py
models/: __init__.py  adverts.py  base.py  courses.py  films.py  users.py
