[project]
name = "telegram-bot-p37"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "alembic>=1.18.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]

[tool.alembic]
script_location = "migrations"
#file_template = "%%(year)d%%(month)d%%(day)d_%%(rev)s"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
